<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/using_the_application" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n1_select_your_instrument_from_the_options_provided"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n2_choose_the_string_you_want_to_tune_by_selecting_the_corresponding_radio_button_the_strings_are_numbered_from_1_to_3_or_1_to_6_depending_on_the_instrument_note_that_the_first_string_of_your_instrument_is_the_one_closest_to_the_ground"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n3_once_you_ve_selected_the_string_the_note_and_frequency_to_which_you_should_tune_the_string_will_be_displayed_at_the_bottom_left_of_the_application"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n4_the_current_frequency_of_the_played_string_will_be_shown_at_the_bottom_left_as_well"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n5_the_top_middle_of_the_application_will_display_the_current_note_of_the_played_string_to_the_left_of_that_you_will_see_the_note_that_comes_before_the_current_note_and_to_the_right_the_upcoming_note"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n6_in_the_center_of_the_application_there_will_be_an_instrument_that_serves_as_an_arrow_with_the_upper_part_of_the_instrument_pointing_in_the_direction_if_the_instrument_points_upward_it_means_the_string_is_in_tune"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/n7_surrounding_the_instrument_there_is_a_red_arc_that_will_turn_green_when_the_string_is_properly_tuned"
            android:paddingTop="10dp"/>
    </LinearLayout>

</ScrollView>
